Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
           />
         </svg>
       </h1>
+      <a href="/contact" class="contact-btn">
+        Contact
+      </a>
     </section>
     <script type="application/javascript" src="scripts.js"></script>
   </body>
